--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,3 +23,6 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: Sanity run
+      run: go run . --year 2022 | fgrep 'Go-ldenweek is 2022/4/29 ~ 2022/5/8'
